# HOT-Omdena-AI-Challenge

./: .gitignore  README.md  environment.yml
hotlib/: LICENSE  README.md  package_test.ipynb  pyproject.toml  requirements.txt
hotlib/docs/: Installation.html  README.md  hotlib.html
hotlib/docs/source/: Installation.rst  conf.py  hotlib.rst  index.rst
hotlib/hotlib/: __init__.py  stitching.py
hotlib/hotlib/postprocessing/: merge_polygons.py  polygonize.py  vectorize.py
task_1_preprocessing/: alternate_georeferencing.py  clip_test.py  generate_osm_data.py  georeference.py  preprocess.py  rescale_polygons.py
task_1_preprocessing/notebooks/: Georeferencing.ipynb  Image_Segmentation_Dataset_Restructuring.ipynb  Super_Resolution_using_ESRGAN.ipynb  labels_preprocessing_epsg3857.ipynb
task_2_main-training/: README.md
task_2_main-training/notebooks/: README.md  Random_forest.ipynb  SemanticSegmentationResNet34Backbone (1).ipynb  Train_XG.ipynb  Unet Implementation for Beginers.ipynb  Unet_Implementation_new_data.ipynb  XGBoostHOT_OSM.ipynb  example_imagedatagenerator_opencities.ipynb  finetuning.ipynb  inference.ipynb  training_Open_Cities.ipynb
task_3_inference/: predict.py  run1.txt
task_3_inference/open_cities/: predict.py
task_3_inference/ramp/: predict.py
task_4_postprocessing/: approx_polygons.py  postprocess.py  stitch.py
task_4_postprocessing/binary_masks_dir/: 1.tif  2.tif  4.tif  5.tif
task_4_postprocessing/masks_test/: OAM-443116-241595-19.tif  OAM-443117-241595-19.tif  OAM-443121-241593-19.tif  OAM-443121-241594-19.tif
(+66 files in other folders)
